# code-review-packs

./: LICENSE  README.md  pyproject.toml
.windsurf/rules/: code-review-python-azure-ai-foundry.md
_docs/repo-bootstrap-instructions/: cascade-checklist.md  cascade-instructions.md
docs/: ai-tool-setup.md  creating-custom-packs.md  getting-started.md  pack-structure.md
packs/python-azure-ai-agent/: overlay.md  pack.yaml
packs/python-azure-ai-agent/checklists/: agent-framework.md  ai-security.md  architecture.md  azure-ai-foundry.md  correctness.md  dependencies.md  documentation.md  operations.md  performance.md  python-patterns.md  readability.md  security.md  tests.md
packs/python-azure-ai-agent/claude/: CLAUDE.md  settings.json
packs/python-azure-ai-agent/cursor/: AGENTS.md  cursorrules
packs/python-azure-ai-agent/examples/: example-review-output.md
packs/python-azure-ai-agent/framework/: dimensions.md  output-format.md  process.md
packs/python-azure-ai-agent/github/scripts/: ai_review.py
packs/python-azure-ai-agent/github/workflows/: ai-code-review.yml
packs/python-azure-ai-agent/windsurf/workflows/: review-ai-agent.md  review-full.md  review-security.md
src/code_review_pack/: __init__.py  cli.py  reviewer.py
tests/: __init__.py  test_cli.py  test_reviewer.py
